--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ext .ts,.tsx --fix src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "dayjs": "^1.11.7",
-    "expo": "~47.0.12",
+    "expo": "^47.0.13",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "force": "0.0.3",
@@ -21,13 +24,18 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "eslint": "^8.34.0",
+    "prettier": "^2.8.4",
     "react-native-svg-transformer": "^1.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3"
