--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "axios": "^1.3.3",
     "dayjs": "^1.11.7",
     "expo": "^47.0.13",
     "expo-font": "~11.0.1",
