--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "axios": "^1.3.3",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "expo": "^47.0.13",
     "expo-font": "~11.0.1",
